--- a/css/login.css
+++ b/css/login.css
@@ -49,19 +49,19 @@ input:hover{
     height: 25px;
 }
 .imguni{
-    height: 2cm;
+    height: 60px;
 }
 .imgfab{
-    position: relative;
-    height: 2cm;
-    top: -10px ;
+   height: 60px;
 }
 .foot{
-    border-top: orange solid 3px;
-    bottom: -15px;
-    position: absolute;
+    border-top :rgb(255, 0, 0) solid 2px; 
+    background-color: rgb(174, 177, 170) ;
+    background-position: 30px ;
+    bottom: 0px;
+    position: fixed;
     width: 100%;
-    height: 10%;
+    height: 8%;
 }
 a
 {
@@ -76,13 +76,16 @@ a
 .head
 {
     border-bottom:rgb(255, 0, 0) solid 2px ;
-    background: rgba(254, 255, 253, 0.7)
+    background: rgba(254, 255, 253, 0.7);
+    display: flex;
+    flex-direction: row;
 }
 .logoAccIns
 {
-    position: absolute;
-    left: 1270px;
-    bottom: 740px;
+    width: 80px;
+    margin-left: auto;
+    padding-left: 10%;
+    padding-top: 1.6%;
 }
 .sos
 {
@@ -90,9 +93,21 @@ a
         bottom: -20px;
 
 }
-@media screen and (min-width: 800px) {
+.images
+{
+    width: 85%;
+}
+.foot a
+{
+    padding-right: 20px;
+    cursor: pointer;
+    position: relative;
+    bottom: 10px;
+    
+}
+/* @media screen and (min-width: 800px) {
     body {
 	    background-image: url(/image/fab2.JPG);
         background-size: cover ;
    }
-}
+} */
