--- a/css/signup.css
+++ b/css/signup.css
@@ -19,11 +19,18 @@
 }
 body{
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
     margin:0 ;
     padding: 0;
+    background-color: rgba(254, 255, 253, 0.7);
     background-image: url(/image/fab2.JPG);
     background-repeat: no-repeat;
-    background-position-x: center
+    background-size: cover;
+    background-position-x: center;
+    
+
+
 }
 .bloblo h3{
     position: relative;
