--- a/css/login.css
+++ b/css/login.css
@@ -1,24 +1,3 @@
-.blabla{
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px red solid ;
-    width: 45%;
-    text-align: center;
-    height: 55%;
-    border-radius: 30px;
-    opacity: 0.7;
-    background: rgba(255, 255, 255, 0.3)
-}
-.blabla:hover
-{
-    height: 58%;
-    width: 48%;
-    opacity: 1;
-    background: rgba(254, 255, 253, 0.7)
-    
-}
 body{
     box-sizing: border-box;
     width: 100%;
@@ -31,25 +10,18 @@ body{
     background-size:100% ;
     background-position-x: center;
 }
-.log{
-    cursor: pointer;
-    color: red;
+/* en tete de la page */
+.head
+{
+    border-bottom:rgb(255, 0, 0) solid 2px ;
+    background: rgba(254, 255, 253, 0.7);
+    display: flex;
+    flex-direction: row;
 }
-i{
-    cursor:pointer ;
-}
-input{
-    border: red solid 2px;
-    border-radius: 10px;
-    width: 180px;
-    height: 20px;
-    text-align: center;
-    color: black;
-    
-
-}
-input:hover{
-    height: 25px;
+/* configuration des images */
+.images
+{
+    width: 85%;
 }
 .imguni{
     height: 60px;
@@ -57,6 +29,74 @@ input:hover{
 .imgfab{
    height: 60px;
 }
+/* configuration des deux logo */
+.logoAccIns
+{
+    width: 80px;
+    margin-left: auto;
+    padding-left: 10%;
+    padding-top: 1.6%;
+}
+/* spacing betwen the logos */
+a
+{
+    padding-right: 10px;   
+}
+/* contenaire de formulaire */
+.boxlog{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px red solid ;
+    width: 45%;
+    text-align: center;
+    border-radius: 30px;
+    opacity: 0.7;
+    background: rgba(255, 255, 255, 0.3)
+}
+.boxlog:hover
+{
+    opacity: 1;
+    text-shadow: 10;
+    background: rgba(254, 255, 253, 0.7)
+    
+}
+/* titre de formulaire */
+.boxlog h3{
+    color: red;
+    font-size: 45px;
+    letter-spacing: 5px;
+    left: 6px;
+}
+.contenu
+{
+    margin: 3%;
+}
+/* les entrees */
+input{
+    text-align: center;
+    width:200px;
+    border: transparent;
+    border-bottom: red solid 1px;
+    border-width: 1px;
+    background-color: transparent;
+    margin: 5px auto;
+    color: black;
+    cursor: pointer;
+
+}
+input:focus{
+    outline: none;
+    width: 100%;
+    transition: 0.5s;
+}
+input:hover{
+    transition: 0.5s;
+    width: 100%;
+    transition: 0.5s;
+}
+/* footer */
 .foot{
     border-top :rgb(255, 0, 0) solid 2px; 
     background-color: rgb(174, 177, 170) ;
@@ -66,40 +106,6 @@ input:hover{
     width: 100%;
     height: 8%;
 }
-a
-{
-    padding-right: 10px;
-    cursor: pointer;
-    
-}
-.contenu
-{
-    padding-top: 120px;
-}
-.head
-{
-    border-bottom:rgb(255, 0, 0) solid 2px ;
-    background: rgba(254, 255, 253, 0.7);
-    display: flex;
-    flex-direction: row;
-}
-.logoAccIns
-{
-    width: 80px;
-    margin-left: auto;
-    padding-left: 10%;
-    padding-top: 1.6%;
-}
-.sos
-{
-    position: relative;
-        bottom: -20px;
-
-}
-.images
-{
-    width: 85%;
-}
 .foot a
 {
     padding-right: 20px;
@@ -107,6 +113,12 @@ a
     position: relative;
     bottom: 10px;
     
+}
+.sociallogo
+{
+    position: relative;
+        bottom: -20px;
+
 }
 /* @media screen and (min-width: 800px) {
     body {
