--- a/css/login.css
+++ b/css/login.css
@@ -1,45 +1,4 @@
-body{
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    margin:0 ;
-    padding: 0;
-    background-image: url(/image/fab2.JPG);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-}
-/* en tete de page */
-.head
-{
-    border-bottom:rgb(255, 0, 0) solid 2px ;
-    background: rgba(254, 255, 253, 0.7);
-    display: flex;
-    flex-direction: row;
-}
-/* config des deux logo de header */.images
-{
-    width: 85%;
-}
-/* config des deux images de header */
-.imguni{
-    height: 60px;
-}
-.imgfab{
-   height: 60px;
-}
-.logoAccIns
-{
-    width: 80px;
-    margin-left: auto;
-    padding-left: 10%;
-    padding-top: 1.6%;
-}
-/* padding betwen the two logos in the header */
-a
-{
-    padding-right: 10px;
-}
+
 /* styling of our forum */
 .boxlog{
     position: absolute;
@@ -52,7 +11,7 @@ a
     height: 55%;
     border-radius: 30px;
     opacity: 0.7;
-    background: rgba(255, 255, 255, 0.3)
+    /* background: rgba(255, 255, 255, 0.3) */
 }
 .boxlog:hover
 {
@@ -108,30 +67,7 @@ input:hover{
     background: rgb(255, 0, 0);
     transition: 1s;
 }
-/* footer */
-.foot{
-    border-top :rgb(255, 0, 0) solid 2px; 
-    background-color: rgb(174, 177, 170) ;
-    background-position: 30px ;
-    bottom: 0px;
-    position: fixed;
-    width: 100%;
-    height: 8%;
-}
-.foot a
-{
-    padding-right: 20px;
-    cursor: pointer;
-    position: relative;
-    bottom: 10px;
-    
-}
-.sociallogo
-{
-    position: relative;
-        bottom: -20px;
 
-}
 /* @media screen and (min-width: 800px) {
     body {
 	    background-image: url(/image/fab2.JPG);
